fixed incorrect display on mobile

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,13 +1,15 @@
-.boardWrapper {
+.app {
 	padding-top: 96px;
-	height: 100%;
+	overflow: hidden;
+  height: 100%;
+  width: 100%;
 
-  @media(max-width:768px){
-    padding-top: 72px;
-  }
-  @media(max-width:600px){
-    padding-top: 64px;
-  }
+	@media (max-width: 768px) {
+		padding-top: 72px;
+	}
+	@media (max-width: 600px) {
+		padding-top: 64px;
+	}
 }
 
 .sidebarActive {
