--- a/src/ui/Board/Board.module.css
+++ b/src/ui/Board/Board.module.css
@@ -1,11 +1,17 @@
+.boardWrapper {
+	padding: 24px 24px 50px 24px;
+	overflow: auto;
+	width: 100%;
+	height: 100%;
+
+	@media (max-width: 600px) {
+		padding: 24px 16px 24px 16px;
+	}
+}
+
 .board {
 	display: flex;
 	gap: 24px;
-	padding: 24px 24px 50px 24px;
-  overflow: visible;
-	height: 100%;
-
-	@media(max-width:600px){
-		padding: 24px 16px 24px 16px;
-	}
+	min-height: 100%;
+	width: fit-content;
 }
